src/App.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}
a {
  text-decoration: none !important;
}
.header-color {
  background: #000000 !important;
}
.smokeEnd {
  display: none;
}
.safari {
  height: 100vh;
  background: #000000 !important;
}
.homepage {
  height: 100vh;
  background: #000000;
}
.homepage::before {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(
    to right,
    #f00,
    rgb(0, 38, 255),
    rgb(255, 94, 0),
    rgb(47, 0, 255),
    rgb(255, 0, 221)
  );
  content: '';
  mix-blend-mode: color;
  pointer-events: none;
}

.smoke {
  object-fit: cover;
  height: 85vh;
  width: 100%;
  z-index: 2;
}
.myName {
  margin: 0;
  padding: 0;
  position: absolute;
  top: 40%;
  transform: translateY(-50%);
  width: 100%;
  text-align: center;
  color: #ddd;
  font-size: 6rem;
  font-family: sans-serif;
  letter-spacing: 0.2rem;
  opacity: 0.9;
  z-index: 2;
}
@media screen and (max-width: 992px) {
  .myName {
    font-size: 4rem;
  }
}

.myName span {
  opacity: 0;
  display: inline-block;
  animation: animate 1s linear forwards;
}

@keyframes animate {
  0% {
    opacity: 0;
    transform: rotateY(90deg);
    filter: blur(10px);
  }
  100% {
    opacity: 1;
    transform: rotateY(0deg);
    filter: blur(0);
  }
}
.myName span:nth-child(1) {
  animation-delay: 1.25s;
}
.myName span:nth-child(2) {
  animation-delay: 2s;
}
.myName span:nth-child(3) {
  animation-delay: 2.5s;
}
.myName span:nth-child(4) {
  animation-delay: 3s;
}
.myName span:nth-child(5) {
  animation-delay: 3.25s;
}
.myName span:nth-child(6) {
  animation-delay: 3.75s;
}
.myName span:nth-child(7) {
  animation-delay: 4s;
}
.status {
  color: white;
  z-index: 2;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  text-align: center;
  color: #ddd;
  font-size: 1.5rem;
  font-family: sans-serif;
  letter-spacing: 0.5rem;
}
@media screen and (max-width: 992px) {
  .status {
    font-size: 1rem;
  }
}

h3 span {
  opacity: 0;
  display: inline-block;
  animation: animate 1.5s ease-in forwards;
}
h3 span:nth-child(1) {
  animation-delay: 4.75s;
}

/* Icons */

.social-icons {
  margin: 0;
  padding: 0;
  position: absolute;
  top: 60%;
  transform: translateY(-50%);
  width: 100%;
  text-align: center;
  color: rgb(255, 255, 255);
  font-size: 2rem;
  font-family: sans-serif;
  letter-spacing: 0.2rem;
  cursor: pointer;
}
@media screen and (max-width: 992px) {
  .social-icons {
    font-size: 1.5rem;
  }
}
.icon-enter {
  margin: 0;
  padding: 0;
  position: absolute;
  top: 75%;
  transform: translateY(-50%);
  width: 100%;
  text-align: center;
  color: rgb(255, 255, 255);
  font-size: 2rem;
  font-family: sans-serif;
  letter-spacing: 0.2rem;
  cursor: pointer;
}
.icon-enter p {
  font-size: 1rem;
}
.icon-enter p:hover {
  color: -webkit-linear-gradient(#f00, rgb(255, 0, 221));
}
.material-icons {
  color: white;
}
/* Icon Animations */
.social-icons span {
  opacity: 0;
  display: inline-block;
  animation: animate 1.5s ease-in forwards;
  padding: 1rem;
}
.social-icons span:nth-child(1) {
  animation-delay: 5.75s;
}
.social-icons span:nth-child(2) {
  animation-delay: 5.75s;
}
.social-icons span:nth-child(3) {
  animation-delay: 5.75s;
}
.social-icons span:nth-child(4) {
  animation-delay: 5.75s;
}

.icon-enter span {
  opacity: 0;
  display: inline-block;
  animation: animate 1s ease-in forwards;
  cursor: pointer;
  text-decoration: none;
}
.icon-enter span:nth-child(1) {
  animation-delay: 6.5s;
}
.fab {
  color: #ffffff;
}
a .fas {
  text-decoration: none;
}
.fas {
  color: #ffffff;
}
.fas:hover {
  color: #ffffff;
  display: block;
  background: #ff3f81;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: 0.5s;
}
.fab:hover {
  color: #ffffff;
  display: block;
  background: #ff3f81;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: 0.5s;
}

/* About Me */

.About {
  position: relative;
  color: rgb(218, 218, 218);
  font-family: Open Sans, sans-serif;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  overflow-y: scroll;
  background: #130d1b;
  background: -webkit-linear-gradient(to right, #2f0743, #2e1d41);
  background: linear-gradient(to right, #100316, #1b1125);
  background: linear-gradient(to top, #230b2c, #000000);
}

.text-container {
  padding-top: 100px;
  height: 60%;
  width: 45%;
  margin: auto;
  font-size: 1rem;
  font-weight: 100;
}
@media screen and (max-width: 970px) {
  .text-container {
    width: 80%;
    font-size: 0.8rem;
  }
}
@media screen and (max-width: 460px) {
  .text-container {
    width: 80%;
    font-size: 0.6rem;
  }
}
.text-container h4 {
  display: block;
  font-size: 3em;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: 100;
}

.text-container .highlight {
  font-style: italic;
  color: #ff3f81;
}
.text-container p {
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  line-height: 1.75em;
  color: rgb(221, 221, 221);
  padding-bottom: 40px;
  font-size: 1.4rem;
}
.about h4 {
  color: #e7e7e7;
}

.myskills {
  font-size: 1.1rem;
  color: rgb(221, 221, 221);
}

/* Projects */

.mdl-layout__content {
  background: rgb(0, 0, 0);
}
.mdl-tabs__tab {
  color: #ececec !important;
}
.mdl-tabs__tab:hover {
  color: #ebebeb !important;
}

.projects-grid {
  display: flex;
  height: 200px;
  flex-wrap: wrap;
  justify-content: space-evenly;
}
.projects-grid > * {
  margin: 1em 0;
}
.mdl-card__supporting-text {
  color: rgb(94, 94, 94) !important;
  border: 1px solid #ececec;
  width: 100% !important;
}
.card-border {
  margin: auto;
}
.card-photo-one {
  background: url(./images/connector.png);
  height: 100px;
  width: 100%;
}
.card-photo-two {
  background: url(./images/vent.png);
  height: 200px;
  width: 100%;
}
.card-photo-three {
  background: url(./images/travel.png);
  height: 200px;
  width: 100%;
}

.card-photo-four {
  background: url(./images/laguna.png);
  height: 200px;
  width: 100%;
}
.card-photo-five {
  background: url(./images/lead.png);
  height: 200px;
  width: 100%;
}
.card-photo-six {
  background: url(./images/loseandlive.png);
  height: 200px;
  width: 100%;
}
.card-photo-seven {
  background: url(./images/firstchocie.png);
  height: 200px;
  width: 100%;
}
.card-photo-eight {
  background: url(./images/vigoalaw.png);
  height: 200px;
  width: 100%;
}
.card-photo-nine {
  background: url(./images/ravyn.jpg);
  height: 200px;
  width: 100%;
}
.contact-container h3 {
  color: white;
}

.contact h3 {
  color: white;
  font-weight: 100;
  padding-bottom: 20px;
}
label {
  color: white;
  display: block;
}
input {
  display: block;
}

.container {
  width: 40%;
  max-width: 1200px;
  margin: 0 auto;
  padding-top: 100px;
}
@media screen and (max-width: 1200px) {
  .container {
    width: 60%;
  }
}
@media screen and (max-width: 992px) {
  .container {
    font-size: 1rem;
    width: 90%;
  }
}

.container * {
  box-sizing: border-box;
}
.invalid-feedback {
  color: rgb(255, 78, 78);
}
.work-together h3 {
  color: #ddd;
  font-weight: 100;
  padding-bottom: 50px;
}
.work-together strong {
  color: #ff3f81;
}

/* Sidebar */

.mdl-layout__drawer {
  background: #000000 !important;
}
.mdl-layout-title {
  color: white !important;
}
.mdl-navigation__link {
  color: white !important;
}
.mdl-navigation__link:hover {
  color: #ff3f81 !important;
  background: none !important;
}

